[Nav] Added logic for radio repeater drops
Corrected return statements for executeTurn and executeDrive. Changed path to deque.

added safety for if rover turned off during task

--- a/config/nav/config.json
+++ b/config/nav/config.json
@@ -43,7 +43,15 @@
 	"lcmChannels":
 	{
 		"navStatusChannel": "/nav_status",
+		"RepeaterDropInitChannel": "/rr_drop_init",
+		"RepeaterDropCompleteChannel": "/rr_drop_complete",
 		"joystickChannel": "/autonomous"
+	},
+
+	"radioRepeater":
+	{
+		"lowSignal": 30.0,
+		"threshold": 5
 	},
 
 	"search":
