[nav] updated rr logic for more robust algorithm
removed print statement

--- a/config/nav/config.json
+++ b/config/nav/config.json
@@ -53,7 +53,8 @@
 	"radioRepeaterThresholds":
 	{
 		"signalStrengthCutOff": 30.0,
-		"lowSignalWaitTime": 3
+		"lowSignalWaitTime": 2,
+		"numIterToUpdateRepeaterDropOdom": 5
 	},
 
 	"search":
